WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
34145
A WebGeolocationControllerClient is leaked for every WebView
https://bugs.webkit.org/show_bug.cgi?id=34145
Summary
A WebGeolocationControllerClient is leaked for every WebView
Steve Falkenburg
Reported
2010-01-25 11:47:53 PST
A WebGeolocationControllerClient is leaked for every WebView
Attachments
Patch
(5.08 KB, patch)
2010-01-25 11:56 PST
,
Steve Falkenburg
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Steve Falkenburg
Comment 1
2010-01-25 11:56:22 PST
Created
attachment 47363
[details]
Patch
Steve Falkenburg
Comment 2
2010-01-25 17:24:35 PST
Committed
r53834
: <
http://trac.webkit.org/changeset/53834
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug