2010-01-25  Steve Falkenburg  <sfalken@apple.com>

Reviewed by Simon Fraser.

        A WebGeolocationControllerClient is leaked for every WebView
        https://bugs.webkit.org/show_bug.cgi?id=34145

        * WebCoreSupport/WebGeolocationControllerClient.cpp:
        (WebGeolocationControllerClient::geolocationDestroyed): Added.
        * WebCoreSupport/WebGeolocationControllerClient.h:
2010-01-25  Steve Falkenburg  <sfalken@apple.com>

        Reviewed by Simon Fraser.

        A WebGeolocationControllerClient is leaked for every WebView
        https://bugs.webkit.org/show_bug.cgi?id=34145

        * WebCoreSupport/WebGeolocationControllerClient.h:
        * WebCoreSupport/WebGeolocationControllerClient.mm:
        (WebGeolocationControllerClient::geolocationDestroyed):
2010-01-25  Steve Falkenburg  <sfalken@apple.com>

        Reviewed by Simon Fraser.

        A WebGeolocationControllerClient is leaked for every WebView
        https://bugs.webkit.org/show_bug.cgi?id=34145

        * page/GeolocationController.cpp:
        (WebCore::GeolocationController::~GeolocationController):
        * page/GeolocationControllerClient.h:


Canonical link: https://commits.webkit.org/45217@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53834 268f45cc-cd09-0410-ab3c-d52691b4dbfc